--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@tiptap/vue-2": "^2.0.0-beta.74",
     "@toast-ui/editor": "^2.5.2",
     "@toast-ui/vue-editor": "^2.5.2",
+    "@vue/compiler-sfc": "^3.2.26",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -188,7 +189,7 @@
     "visibilityjs": "^1.2.4",
     "vue": "^2.6.12",
     "vue-apollo": "^3.0.3",
-    "vue-loader": "^15.9.8",
+    "vue-loader": "^16.8.3",
     "vue-observe-visibility": "^1.0.0",
     "vue-resize": "^1.0.1",
     "vue-router": "3.4.9",
