--- a/package.json
+++ b/package.json
@@ -96,7 +96,6 @@
     "@tiptap/vue-2": "^2.0.0-beta.74",
     "@toast-ui/editor": "^2.5.2",
     "@toast-ui/vue-editor": "^2.5.2",
-    "@vue/compiler-sfc": "^3.2.26",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -110,6 +109,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-lodash": "^3.3.4",
     "bootstrap": "4.5.3",
+    "cache-loader": "^4.1.0",
     "canvas-confetti": "^1.4.0",
     "clipboard": "^2.0.8",
     "codemirror": "^5.48.4",
@@ -189,7 +189,7 @@
     "visibilityjs": "^1.2.4",
     "vue": "^2.6.12",
     "vue-apollo": "^3.0.3",
-    "vue-loader": "^16.8.3",
+    "vue-loader": "^15.9.6",
     "vue-observe-visibility": "^1.0.0",
     "vue-resize": "^1.0.1",
     "vue-router": "3.4.9",
