--- a/lib/gitlab/ci/templates/Jobs/container-build.gitlab-ci.yml
+++ b/lib/gitlab/ci/templates/Jobs/container-build.gitlab-ci.yml
@@ -27,7 +27,7 @@
         NOSLASH=$(echo "$CI_COMMIT_TAG" | tr -s / - )
         SANITIZED="${NOSLASH//[^a-zA-Z0-9\-\.]/}"
         IMAGE_TAG="$SANITIZED"
-      else \
+      else
         NOSLASH=$(echo "$CI_COMMIT_REF_NAME" | tr -s / - )
         SANITIZED="${NOSLASH//[^a-zA-Z0-9\-]/}"
         IMAGE_TAG="branch-$SANITIZED"
@@ -35,8 +35,7 @@
       echo "${IMAGE_TAG}"
     - mkdir -p /kaniko/.docker
     # Write credentials to access Gitlab Container Registry within the runner/ci
-    - |-
-      echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(echo -n ${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD} | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(echo -n ${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD} | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
     # Build and push the container. To disable push add --no-push
     - /kaniko/executor --context ${CI_PROJECT_DIR} --dockerfile ${DOCKERFILE} --destination ${CI_REGISTRY_IMAGE}/${IMAGE_NAME}:$IMAGE_TAG $KANIKO_ARGS
   cache: []
