--- a/lib/gitlab/ci/templates/Jobs/container-build.gitlab-ci.yml
+++ b/lib/gitlab/ci/templates/Jobs/container-build.gitlab-ci.yml
@@ -45,5 +45,5 @@
     # Write credentials to access Gitlab Container Registry within the runner/ci
     - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(echo -n ${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD} | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
     # Build and push the container. To disable push add --no-push
-    - /kaniko/executor --context ${CI_PROJECT_DIR} --dockerfile ${KANIKO_BUILD_DOCKERFILE} --destination ${CI_REGISTRY_IMAGE}/${KANIKO_BUILD_IMAGE_NAME}:$KANIKO_BUILD_IMAGE_TAG $KANIKO_ARGS
+    - /kaniko/executor --context ${CI_PROJECT_DIR} --dockerfile ${KANIKO_BUILD_DOCKERFILE} --destination "${CI_REGISTRY_IMAGE}/${KANIKO_BUILD_IMAGE_NAME}:${KANIKO_BUILD_IMAGE_TAG}" $KANIKO_ARGS
   cache: []
